# FastApi-PetProject

./: .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt
Training/models/: users.py
Training/routers/: users.py
alembic/: env.py
alembic/versions/: 7a63f689a3f2_initial_migration.py  8b40e241a0d5_calculation_classes.py  a81cb422ba38_initial_migration.py  f799e76a9a81_initial_migration.py
app/: app.py
app/alembic/: env.py
app/alembic/versions/: 7d6601a132e0_calculation_classes.py  asdasdaw1230_calculation_classes.py
app/dao/: user.py
app/database/: base.py  dao.py  database.py
app/models/: users.py
app/routers/: users.py
app/schemas/: cfg.py
app/schemas/users/: request.py  response.py
app/services/: users.py
services/: users.py
